# logging-client

./: .clang-tidy  CMakeLists.txt  Dockerfile
.github/workflows/: cmake-single-platform.yml
config_parser/: CMakeLists.txt
config_parser/include/: config_constants.hpp  i_config_parser.hpp  yaml_config_parser.hpp
config_parser/src/: main.cpp  yaml_config_parser.cpp
config_parser/test/unit/: CMakeLists.txt  yaml_config_parser_test.cpp
scripts/: format-checker.sh  lint-checker.sh
